# cg-learning

./: .gitignore  CMakeLists.txt  main.cpp
shaders/colored_square/: fragment.glsl  vertex.glsl
